--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <title>Some Topic!</title>
     <link type="text/css" href="/static/webnodes.css" rel="stylesheet">
-    <script type="text/javascript" src="/static/jquery-1.2.6.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <!--[if lt IE 7]><script src="http://ie7-js.googlecode.com/svn/version/2.0(beta3)/IE8.js" type="text/javascript"></script><![endif]-->
     <!--[if IE]><script type="text/javascript" src="/static/excanvas.js"></script><![endif]-->
     <script type="text/javascript" src="/static/webnodes.js"></script>  
@@ -47,10 +47,13 @@
     {% for comment in comments %}
         <div id="{{ comment.id }}" class="comment_container">
             <div class="comment">
+                <a href="#" class="prev pagination">Prev</a>
+                <a href="#" class="next pagination">Next</a>
                 <div>
                     <a class="author" href="/users/{{ comment.author }}">{{ comment.author }}</a>
                     <div class="content">{{ comment.content }}</div>
                 </div>
+
             </div>
         </div>
     {% endfor %}
