--- a/static/webnodes.css
+++ b/static/webnodes.css
@@ -4,7 +4,6 @@ body {
     color: #000000;
     background-color: #826F4F;
     padding-top: 20px;
-    padding-bottom: 20px;
     font-weight: 400;
     color: #333333;
     line-height: 24px;
@@ -51,6 +50,10 @@ canvas {
     box-shadow: -5px 5px 25px #3F321B;
 }
 
+.comment .score {
+    color: grey;
+}
+
 .comment .content {
     overflow: hidden;
     max-height: 400px;
@@ -59,4 +62,9 @@ canvas {
 .comment .pagination {
     display: none;
     text-align: center;
+}
+
+.comment .pagination a {
+    margin-left: 30px;
+    margin-right: 30px;
 }
