--- a/templates/base.html
+++ b/templates/base.html
@@ -2,61 +2,28 @@
 
 <html>
 <head>
-    <title>Some Topic!</title>
+    {% block title %}
+        <title>WebNodes</title>
+    {% endblock %}
     <link type="text/css" href="/static/webnodes.css" rel="stylesheet">
+    {% block style %}{% endblock %}
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <!--[if lt IE 7]><script src="http://ie7-js.googlecode.com/svn/version/2.0(beta3)/IE8.js" type="text/javascript"></script><![endif]-->
     <!--[if IE]><script type="text/javascript" src="/static/excanvas.js"></script><![endif]-->
     <script type="text/javascript" src="/static/webnodes.js"></script>  
-    <script type="text/javascript">
-        $(document).ready(function(){
-             var timeDiff  =  {
-                setStartTime:function (){
-                    d = new Date();
-                    time  = d.getTime();
-                },
-                getDiff:function (){
-                    d = new Date();
-                    return (d.getTime()-time);
-                }
-            }
-                
-            graph = {{ graph }};
-                
-            timeDiff.setStartTime();
-            root = $("#{{ root }}").width('98%').show()[0];
-            WebNodes(root, graph);
-            
-            //alert(timeDiff.getDiff());
-        });
-    </script>
-    
-    <noscript>
-        <style type="text/css">
-            .comment {
-                display: block;
-                position: relative;
-                margin: 10px;
-            }
-        </style>
-    </noscript>
-    
+    {% block script %}{% endblock %}
 </head>
 
 <body>
-    {% for comment in comments %}
-        <div id="{{ comment.id }}" class="comment_container">
-            <div class="comment">
-                <a class="author" href="/users/{{ comment.author }}">{{ comment.author }}</a>
-                <span class="score">({{ comment.score }})</span>
-                <div class="content">{{ comment.content }}</div>
-                <div class="pagination">
-                    <a href="#" class="prev">Prev</a>
-                    <a href="#" class="next">Next</a>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
+    <div id="header">
+        <a href="/">Home</a>
+    </div>
+    <div id="content">
+        {% block content %}{% endblock %}
+    </div>
+    <div id="footer">
+        
+    </div>
 </body>
 
 </html>
