--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,11 @@
 <html>
 <head>
     {% block title %}
-        <title>WebNodes</title>
+        <title>webnodes</title>
     {% endblock %}
     <link type="text/css" href="/static/webnodes.css" rel="stylesheet">
     {% block style %}{% endblock %}
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-    <!--[if lt IE 7]><script src="http://ie7-js.googlecode.com/svn/version/2.0(beta3)/IE8.js" type="text/javascript"></script><![endif]-->
-    <!--[if IE]><script type="text/javascript" src="/static/excanvas.js"></script><![endif]-->
-    <script type="text/javascript" src="/static/webnodes.js"></script>  
     {% block script %}{% endblock %}
 </head>
 
