--- a/templates/thread.html
+++ b/templates/thread.html
@@ -5,11 +5,6 @@
     #content {
         width: auto;
     }
-    
-    #{{ root }} {
-        width: 95%;
-        display: block;
-    }
 </style>
 {% endblock %}
 
@@ -55,6 +50,7 @@
                 <div class="body">{{ comment.body|safe }}</div>
                 <div class="pagination">
                     <a href="#" class="prev">Prev</a>
+                    <a href="#">+</a>
                     <a href="#" class="next">Next</a>
                 </div>
             </div>
