--- a/templates/thread.html
+++ b/templates/thread.html
@@ -50,7 +50,7 @@
                 <div class="body">{{ comment.body|safe }}</div>
                 <div class="pagination">
                     <a href="#" class="prev">Prev</a>
-                    <a href="#">+</a>
+                    <a href="#" class="expand">+</a>
                     <a href="#" class="next">Next</a>
                 </div>
             </div>
