--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <link type="text/css" href="/static/webnodes.css" rel="stylesheet">
     {% block style %}{% endblock %}
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <!--[if lt IE 7]>
+    <script src="http://ie7-js.googlecode.com/svn/version/2.0(beta3)/IE7.js" type="text/javascript"></script>
+    <![endif]-->
     {% block script %}{% endblock %}
 </head>
 
