--- a/static/webnodes.css
+++ b/static/webnodes.css
@@ -51,12 +51,14 @@ canvas {
 
 .comment, .topic {
     background-color: #EFE7E0;
+    
+    border-radius: 7px;
     -webkit-border-radius: 7px;
     -moz-border-radius: 7px;
-    border-radius: 7px;
+    
+    box-shadow: -5px 5px 25px #3F321B;
     -webkit-box-shadow: -5px 5px 25px #3F321B;
     -moz-box-shadow: -5px 5px 25px #3F321B;
-    box-shadow: -5px 5px 25px #3F321B;
 }
 
 .comment {
@@ -73,9 +75,22 @@ canvas {
 .comment .body {
     overflow: auto;
     max-height: 400px;
+    /* IE6 and lower hack for max height */
+    _height: expression(this.scrollHeight > 399 ? "400px" : "auto");
 }
 
 .comment .body p {
+    margin: 0px;
+    padding: 0px;
+}
+
+/* TinyMCE reply box */
+body.mceContentBody {
+    background: none;
+    background-color: #EFE7E0;
+}
+
+body.mceContentBody p {
     margin: 0px;
     padding: 0px;
 }
@@ -102,9 +117,6 @@ canvas {
     margin-bottom: 15px;
 }
 
-body.mceContentBody {
-    background: none;
-    background-color: #EFE7E0;
-}
+
 
 
