--- a/templates/topic.html
+++ b/templates/topic.html
@@ -40,7 +40,7 @@
     {% for comment in comments %}
         <div id="{{ comment.id }}" class="comment_box">
             <div class="comment">
-                <a class="author" href="http://www.reddit.com/user/{{ comment.author }}">{{ comment.author }}</a>
+                <a class="author" href="/users/{{ comment.author }}">{{ comment.author }}</a>
                 <span class="score">({{ comment.score }})</span>
                 <div class="body">{{ comment.body|safe }}</div>
                 <div class="buttons">
