Model clean up, preparing to add tags.

--- a/templates/topics.html
+++ b/templates/topics.html
@@ -6,10 +6,27 @@
     #content {
         width: 800px;
     }
+    
+    #sidebar {
+        float: right;
+    }
+    
+    #sidebar a {
+        display: block;
+    }
 </style>
 {% endblock %}
 
 {% block content %}
+    <div id="sidebar">
+        <a href="/topics/new">Start a topic</a>
+        <h3>Tags</h3>
+        <a href="/tags/tag">tag</a>
+        <a href="/tags/tag">tag1</a>
+        <a href="/tags/tag">tag2</a>
+        <a href="/tags/tag">tag3</a>
+    </div>
+
     {% for topic in topics %}
         <div class="topic">
             <a href="/topics/{{ topic.id }}">{{ topic.title }}</a>
