--- a/templates/topics_new.html
+++ b/templates/topics_new.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
 
 
+{% block script %}
+    <script type="text/javascript" src="/static/tiny_mce/tiny_mce.js"></script>
+    <script>
+        tinyMCE.init({
+            mode : "textareas",
+            theme : "simple"
+        });
+    </script>
+{% endblock %}
+
 {% block style %}
 <style>
     #content {
