Added tagging. Starting to add voting.

--- a/templates/topic.html
+++ b/templates/topic.html
@@ -54,7 +54,7 @@
         </div>
     {% endfor %}
     
-    <div id="reply_container" class="comment_box">
+    <div id="reply_box" class="comment_box">
         <div class="comment">
             <form id="reply_form" action="/comments" method="post">
                 <input type="hidden" id="parent_id" name="parent_id" value="{{ parent_id }}">
