--- a/templates/topics.html
+++ b/templates/topics.html
@@ -19,7 +19,7 @@
 
 {% block content %}
     <div id="sidebar">
-        <a href="/topics/new">Start a topic</a>
+        <a href="/{{ group_url }}/topics/new">Start a topic</a>
         <h3>Tags</h3>
         {% for tag in tags %}
             <a href="/topics?tag={{ tag.name }}">{{ tag.name }} ({{ tag.count }})</a>
