--- a/static/webnodes.css
+++ b/static/webnodes.css
@@ -102,7 +102,8 @@ body.mceContentBody p {
     text-align: center;
 }
 
-.comment .buttons a {
+.comment .buttons a, 
+.comment .buttons span {
     float: left;
     width: 20%;
     visibility: hidden;
