--- a/templates/topic.html
+++ b/templates/topic.html
@@ -47,7 +47,7 @@
                 <div class="buttons">
                     <a class="expand" href="#">+</a>
                     <a class="prev" href="#">«</a>
-                    <a class="page_num" href="#"></a>
+                    <span class="page_num"></span>
                     <a class="next" href="#">»</a>
                     <a class="reply" href="#">reply</a>
                 </div>
