--- a/templates/reddit_topic.html
+++ b/templates/reddit_topic.html
@@ -49,7 +49,8 @@
                 
                 <div class="body">{{ comment.body|safe }}</div>
                 <div class="buttons">
-                    <a class="expand" href="#">+</a>
+                    <a class="shrink" href="#">[-]</a>
+                    <a class="expand" href="#">[+]</a>
                     <a class="prev" href="#">«</a>
                     <span class="page_num"></span>
                     <a class="next" href="#">»</a>
