Removed shrink / expand buttons. Comment body no longer has max-height & scroll bars.

--- a/templates/topic.html
+++ b/templates/topic.html
@@ -50,8 +50,7 @@
                 
                 <div class="body">{{ comment.body|safe }}</div>
                 <div class="buttons">
-                    <a class="shrink" href="#">[-]</a>
-                    <a class="expand" href="#">[+]</a>
+                    <a class="hide" href="#">[-]</a>
                     <a class="prev" href="#">«</a>
                     <span class="page_num"></span>
                     <a class="next" href="#">»</a>
