--- a/static/webnodes.css
+++ b/static/webnodes.css
@@ -100,6 +100,14 @@ body.mceContentBody p {
     padding: 0px;
 }
 
+.comment img {
+    max-width: 100%;
+}
+
+.comment .body {
+    overflow: auto;
+}
+
 .comment .buttons {
     width: 100%;
     text-align: center;
